[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
    "streamlit>=1.43.1",
    "wave>=0.0.2",
]
